--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,24 @@ li {
   display: inline;
   margin: 0 16px;
 }
+
+/* -------Responsiveness------- */
+
+@media (max-width: 960px) {
+  /* For a screen < 960px, this CSS will be read */
+  .container {
+    width: 700px;
+  }
+}
+@media (max-width: 720px) {
+  /* For a screen < 720px, this CSS will be read */
+  .container {
+    width: 500px;
+  }
+}
+@media (max-width: 540px) {
+  /* For a screen < 540px, this CSS will be read */
+  .container {
+    width: 300px;
+  }
+}
